fixed: header z-index

--- a/src/styles/layout/HeaderLayout.scss
+++ b/src/styles/layout/HeaderLayout.scss
@@ -1,5 +1,5 @@
 .header-layout__wrapper{
-    z-index: 1050;
+    z-index: 100;
     width: 100%;
     height: 56px;
     display: flex;
